--- a/tasks_backend_api.csproj
+++ b/tasks_backend_api.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Providers\TaskProvider.cs~RF19d8b716.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
